--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "helmet": "^3.16.0",
+    "moment": "^2.24.0",
     "mongoose": "^5.4.22",
     "multer": "^1.4.1",
     "sharp": "^0.22.0",
