--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.18.3",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "fs": "0.0.1-security",
     "helmet": "^3.16.0",
     "moment": "^2.24.0",
     "mongoose": "^5.4.22",
